fixed sign in pages (not responsive)

--- a/src/styles/signin/SignIn.css
+++ b/src/styles/signin/SignIn.css
@@ -6,7 +6,7 @@
     align-items: center;
     height: 100vh;
     margin: auto; 
-    max-width: 1100px;
+    max-width: 1000px;
 }
 
 .cont-border{
@@ -27,7 +27,7 @@
 .title{
     color: #FCBF15;
     font-family: Poppins;
-    font-size: 35px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -36,7 +36,7 @@
 .subtitle{
     color: #121212;
     font-family: Poppins;
-    font-size: 35px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
